--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pdf-lib": "^1.17.1",
-    "playwright": "^1.57.0",
     "playwright-core": "^1.57.0",
+    "puppeteer-core": "^24.34.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0"
@@ -28,6 +28,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "puppeteer": "^24.34.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
