--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pdf-lib": "^1.17.1",
+    "playwright": "^1.57.0",
     "playwright-core": "^1.57.0",
     "puppeteer-core": "^24.34.0",
     "react": "19.2.3",
